<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mm_b"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.qixing.wode.My_MoreActivity" >

    <include layout="@layout/topbar" />

    <LinearLayout
        android:id="@+id/more_ll_inform"
        style="@style/ll1" >

        <TextView
            style="@style/qitatext"
            android:text="@string/tixing" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/more_ll_character"
        style="@style/ll2" >

        <TextView
            style="@style/qitatext"
            android:text="@string/character" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/more_ll_liuliang"
        style="@style/ll2" >

        <TextView
            style="@style/qitatext"
            android:text="@string/liuliang" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/more_ll_about"
        style="@style/ll2" >

        <TextView
            style="@style/qitatext"
            android:text="@string/about" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/more_ll_clear"
        style="@style/ll2" >

        <TextView
            style="@style/qitatext"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>