<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@layout/background_login"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="骑行天下"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="280dp"
        android:layout_margin="15dip"
        android:background="@layout/background_login_div_bg"
        android:padding="15dip" >

        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_user_input"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/login_mail_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password_edit"
            android:layout_below="@+id/username_edit"
            android:layout_marginTop="14dp"
            android:text="@string/login_label_register" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_mail_input" >

            <EditText
                android:id="@+id/mail_edit"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/login_register_hint"
                android:inputType="text"
                android:singleLine="true" />

            <Button
                android:id="@+id/button123"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@layout/background_login_div_bg"
                android:text="@string/huoquyanzheng" />
        </LinearLayout>

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@layout/background_login_div_bg"
            android:text="@string/tijiaoyanzheng"
             />
        <!-- android:onClick="send" -->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" />

        <ImageView
            android:id="@+id/miniTwitter_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/qixingtianxia" />
    </RelativeLayout>

</LinearLayout>